2000-11-01  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWeb.framework/GSWApplication.m (GSWApplicationMain): fixed path
	for dynamically loading frameworks.

2000-10-30  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWeb.framework/htmltag.g: changed gsweb include dir from
	gsweb/GSWeb.framework/ to GSWeb/
	* GSWeb.framework/html.g: likewise.
	* GSWeb.framework/PageDef.g: likewise.
	* GSWeb.framework/GSWResourceManager.m ([GSWResourceManager
	+_applicationGSWBundle]): fix location of MIME.plist and language.plist

2000-10-30  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWExtensions.framework/GNUmakefile: rewrite using framework.make
	* GSWExtensions.framework/*.(h|m): changed gsweb include dir from
	gsweb/GSWeb.framework/ to GSWeb/

	* GSWeb.framework/GNUmakefile: rewrite using framework.make
	* GSWeb.framework/*.(h|m): changed gsweb include dir from
	gsweb/GSWeb.framework/ to GSWeb/
	* GSWeb.framework/GSWConstants.m: removed the frameworkd suffix.
	* GSWeb.framework/GSWUtils.m ([NSBundle +tmpAllFrameworks]): removed.

2000-10-29  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWeb.framework/GSWElementIDString.h: use NSMutableString instead of
	the no longer present NSGMutableString.

2000-10-04  Manuel Guesdon <mguesdon@orange-concept.com>

        * GSWExtensions.framework/Makefile.preamble: added GDL2 FLAG
        * GSWExtensions.framework/*/*.html: lowercase tags
        * GSWExtensionsGSW.framework/*/*.html: lowercase tags
        * GSWeb.framework/GNUmakefile : added DTDs, modified Files list
        * GSWeb.framework/GSWApplication.m: commented [GSWHTMLParser printsDiagnostics]
                                            changes for GDL2
        * GSWeb.framework/GSWBrowser.h/.m: implementation
        * GSWeb.framework/GSWBundle.m: Parser call modification, handling of .gswi unarchiving
        * GSWeb.framework/GSWComponentContent.m: Logs
        * GSWeb.framework/GSWConfig.h: Added GSWEB_DEFAULT_HTML_PARSER_CLASS_NAME