@@ -1,3 +1,11 @@
+2000-11-01  Manuel Guesdon <mguesdon@orange-concept.com>
+
+	* GSWeb.framework/GSWApplication.m: removed a trace
+	* GSWeb.framework/GSWTemplateParserXML.m: fix XML 
+		properties key case bug
+	* GSWeb.framework/GSWElementIDString.[hm]: changed 
+		implementation to conform to NSString cluster.
+		
 2000-11-01  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
 	* GSWeb.framework/GSWApplication.m (GSWApplicationMain): fixed path
